scripts/generator/tests/fixtures/dportsv3/invalid/parse/invalid-on-missing.dops
target @main
port category/name
mk remove USES linux on-missing maybe
